<resources>
    <string name="app_name">Foreign Exchange Rate</string>
    <string name="hello_blank_fragment">Label Blank</string>
    <string name="fx_trade">FXMarketAPI</string>
    <string name="australian_dollar">Australian Dollar</string>
    <string name="submit_fxrate">Submit FXRate</string>
    <string name="euro">Euro</string>
    <string name="british_pound_sterling">British Pound Sterling</string>
    <string name="japanese_yen">Japanese Yen</string>
    <string name="response_fxrate">Response FXRATE</string>
    <string name="graph_display">Graph Display</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="amount">Amount</string>
    <string name="fxmarketapi">FXMarketAPI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="Currencies">
        <item>AUDUSD</item>
        <item>EURUSD</item>
        <item>GBPUSD</item>
        <item>USDJPY</item>
    </string-array>


</resources>